--- a/shoes-microservice-spring-boot/Dockerfile
+++ b/shoes-microservice-spring-boot/Dockerfile
@@ -1,10 +1,11 @@
-FROM maven as build 
+FROM maven as build
 WORKDIR /app
 COPY . .
-RUN mvn install 
+RUN mvn install
 
 FROM openjdk:11.0.10-jre
 WORKDIR /app
-COPY --from=build /app/target/shoes-0.0.1-SNAPSHOT.jar /app
+COPY --from=build /app/target/shoes-0.0.1-SNAPSHOT.jar /app/
 EXPOSE 1002
-CMD ["java","-jar","shoes-0.0.1-SNAPSHOT.jar"]
+CMD [ "java", "-jar", "shoes-0.0.1-SNAPSHOT.jar"]
+
