--- a/wishlist-microservice-python/Dockerfile
+++ b/wishlist-microservice-python/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3
 COPY . .
-RUN pip install flask flask_cors
+RUN pip intall flask flask_cors
 EXPOSE 1003
-CMD ["python","index.py"]
+CMD [ "python", "index.py" ]
