--- a/zuul-api-gateway/Dockerfile
+++ b/zuul-api-gateway/Dockerfile
@@ -1,10 +1,10 @@
-FROM maven as build 
+FROM maven as build
 WORKDIR /app
 COPY . .
-RUN mvn install 
+RUN mvn install
 
 FROM openjdk:11.0.10-jre
 WORKDIR /app
-COPY --from=build /app/target/zuul-0.0.1-SNAPSHOT.jar /app
+COPY --from=build /app/target/zuul-0.0.1-SNAPSHOT.jar /app/
 EXPOSE 9999
-CMD ["java","-jar","zuul-0.0.1-SNAPSHOT.jar"]
+CMD [ "jar", "-jar", "zuul-0.0.1-SNAPSHOT.jar" ]
